fixed overflow in nav

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -75,6 +75,7 @@ body {
   padding: 0;
   justify-content: center;
   margin-right: 287px;
+  flex-wrap: wrap;
 }
 
 .header_link_container {
